logs/2022-09-10.exception.log
2022-09-10 00:31:18 error : uncaughtException: Unexpected token '}'
D:\numble\controller\doctor.js:23
        })
        ^

SyntaxError: Unexpected token '}'
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1033:15)
    at Module._compile (node:internal/modules/cjs/loader:1069:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (D:\numble\routes\doctor.js:4:26)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
2022-09-10 12:40:57 error : uncaughtException: Cannot read properties of null (reading 'doctor')
TypeError: Cannot read properties of null (reading 'doctor')
    at D:\numble\controller\doctor.js:48:28
    at processTicksAndRejections (node:internal/process/task_queues:96:5)
    at async exports.getDoctorInfo (D:\numble\controller\doctor.js:46:5)
